--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-APP_API_KEY=
 APP_PORT=
 
 NODE_ENV=
@@ -9,6 +8,6 @@ DB_HOST=
 DB_NAME=
 DB_PORT=
 
-OPENAI_API_KEY=
-DEEPSEEK_API_KEY=
-GEMINI_API_KEY=
+JWT_SECRET=
+JWT_ACCESS_EXPIRES=
+JWT_REFRESH_EXPIRES=
